components/src/patterns/footer/footer.scss
@import '../../helpers/style-helpers.scss';
@import '@scania/typography/dist/scss/mixins';
@import '@scania/typography/dist/scss/tokens';
@import '@scania/grid/dist/scss/grid.scss';

@mixin footer-links {
  padding: 0;
  margin: 0;
  display: flex;
  flex-direction: column;

  li {
    list-style: none;
    padding: 0;
    margin: 0;
    display: inline-block;
    a {
      margin-right: var(--sdds-spacing-element-24);
      text-decoration: none;
    }
  }
}

@mixin footer-top-link {
  position: relative;
  color: var(--#{$prefix}-footer-top-links);

  &:after {
    content: '';
    position: absolute;
    width: calc(100% + 120px);
    height: 100%;
    z-index: -1;
    border-bottom: 1px solid var(--#{$prefix}-footer-top-divider);
    box-sizing: border-box;
    bottom: 0;
    left: -48px;
  }

  &:hover,
  &.hover {
    &:after {
      background-color: var(--#{$prefix}-footer-top-links-bg-hover);
    }
  }

  @media all and (min-width: $grid-lg) {
    padding: 0;
    margin-bottom: var(--#{$prefix}-spacing-element-8);

    &:after {
      display: none;
    }
  }
}

.#{$prefix}-footer {
  width: 100%;
  display: flex;
  flex-direction: column;
  position: relative;
  overflow: hidden;
}

.#{$prefix}-footer-main-links,
.#{$prefix}-footer-social-links {
  @include footer-links;
}

.#{$prefix}-footer-top {
  background-color: var(--#{$prefix}-footer-top-bg);

  .#{$prefix}-footer-title {
    @include type-style('headline-07');
    @include footer-top-link;
    padding: var(--#{$prefix}-footer-top-title-padding-mobile);
    opacity: var(--#{$prefix}-footer-top-title-opacity-mobile);
    display: flex;
    cursor: pointer;

    span:first-child {
      flex-grow: 1;
    }

    .#{$prefix}-footer-top-icon {
      transition: transform 0.3s cubic-bezier(0.55, 0.055, 0.675, 0.19);
      transform: rotate(0deg);
    }

    &.opened {
      .#{$prefix}-footer-top-icon {
        transform: rotate(180deg);
      }
    }
  }

  .#{$prefix}-footer-main-links {
    display: none;
    li a {
      padding: var(--#{$prefix}-footer-top-link-padding-mobile);
      opacity: var(--#{$prefix}-footer-top-links-opacity);
      font-weight: normal;
      display: block;
      @include footer-top-link;
      &:hover,
      &.hover {
        text-decoration: underline;
      }
    }
    &.opened {
      display: flex;
    }
  }
}

.#{$prefix}-footer-main {
  background-color: var(--#{$prefix}-footer-main-bg);
  padding: var(--#{$prefix}-footer-main-padding-sm);
  display: flex;
  width: 100%;
  align-items: stretch;
  flex-direction: column;

  .#{$prefix}-footer-main-links,
  .#{$prefix}-footer-social-links {
    li a {
      font-weight: bold;
      color: var(--#{$prefix}-footer-main-links);
      opacity: var(--#{$prefix}-main-links-opacity);
    }
  }

  .#{$prefix}-footer-main-links {
    margin-bottom: var(--sdds-spacing-element-24);

    li a {
      margin-bottom: var(--sdds-spacing-element-8);
      display: inline-block;
      &:hover,
      &.hover {
        text-decoration: underline;
      }
    }
  }

  .#{$prefix}-footer-social-links {
    margin-top: var(--sdds-spacing-element-24);
    margin-bottom: var(--sdds-spacing-element-24);
    flex-direction: row;
    li a {
      margin-left: 0;
      margin-right: var(--sdds-spacing-element-24);
      &:hover,
      &.hover {
        text-decoration: none;
      }
    }
  }

  .#{$prefix}-footer-main-brand {
    border-top: 1px solid var(--#{$prefix}-footer-main-divider);
    padding-top: var(--#{$prefix}-footer-brand-padding-top-mobile);
    padding-bottom: var(--#{$prefix}-footer-brand-padding-bottom-mobile);
    width: 100%;
    background-image: var(
      --#{$prefix}-background-image-scania-wordmark-white-png
    );
    background-image: var(
      --#{$prefix}-background-image-scania-wordmark-white-svg
    );
    background-repeat: no-repeat;
    background-size: 117px;
    background-position: center bottom;
    p {
      @include type-style('detail-02');
      color: var(--#{$prefix}-footer-main-copyright);
      margin: 0;
      padding: 0;
    }
  }
}

@media all and (min-width: $grid-md) {
  .#{$prefix}-footer-main {
    padding: var(--#{$prefix}-footer-main-padding-md);
  }
}

@media all and (min-width: $grid-lg) {
  .#{$prefix}-footer-top {
    padding-top: 40px;
    padding-bottom: 120px;

    .#{$prefix}-footer-title {
      opacity: var(--#{$prefix}-footer-top-title-opacity);
      cursor: default;

      .#{$prefix}-footer-top-icon {
        display: none;
      }
    }

    .#{$prefix}-footer-main-links {
      display: flex;
      li a {
        font-weight: bold;
      }
    }
  }
  .#{$prefix}-footer-main {
    padding: var(--#{$prefix}-footer-main-padding);
    flex-direction: row;
    flex-wrap: wrap;

    .#{$prefix}-footer-main-links {
      flex-direction: row;
      flex-grow: 1;
      margin-bottom: var(--sdds-spacing-element-40);
      li a {
        margin-bottom: 0;
      }
    }
    .#{$prefix}-footer-social-links {
      margin-top: 0;
      text-align: right;
      li a {
        margin-right: 0;
        margin-left: var(--sdds-spacing-element-24);
      }
    }

    .#{$prefix}-footer-main-brand {
      padding-top: var(--#{$prefix}-footer-brand-padding-top);
      padding-bottom: var(--#{$prefix}-footer-brand-padding-bottom);
      background-position: right center;
    }
  }
}

